--- a/praxis-i.html
+++ b/praxis-i.html
@@ -93,7 +93,7 @@
     <p>Through some low fidelity prototypes and pairwise comparison we then had a list of 5 designs, which were then converged upon. Within our various designs we needed to compare them against each other to converge upon a final solution. This measurement matrix in conjecture with a pugh chart helped our team reach one solution. The Clay-Lever chair attachment.</p>
     <p>The Clay-Lever Design is a portable solution that stabilizes uneven chair legs using modeling clay and a quick-release lever. The clay molds around the leg to securely attach the design, while a quick-release lever allows for easy height adjustment, similar to the mechanism used for adjusting bike seats. Now we will take a deeper dive into the CTMF’s we used.</p>
   </div>
-<h2>Reframing</h2>
+<h2>Reframing - Framing</h2>
 <img class="centered-img" src="REFRAME.png" alt="Reframing Visual" />
 <div class="caption">
   <p>As our understanding of the problem evolved, so did our framing of the stakeholders and design scope. Initially, we identified both UofT Engineering Students and Maintenance Staff as key stakeholders impacted by unstable chairs across campus. However, through further analysis and practicality considerations, we refined our focus to only include UofT students, specifically those in Engineering Science.</p>
@@ -105,7 +105,7 @@
   <p>This reframing allowed us to create a more targeted and feasible design brief, with a focus on providing a portable, user-driven solution that could be easily implemented by students themselves in the specific environments most affected.</p>
 </div>
 
-  <h2>Brainwriting 6-3-5</h2>
+  <h2>Brainwriting 6-3-5 - Diverging</h2>
   <div class="caption">
     <p>While using “Brainwriting 6-3-5” our team began by using several sticky notes to sketch out a possible solution for our opportunity. This diverging strategy is strong as it has each member independently work and then share resulting in all ideas and opinions being shared. After each member had a chance to sketch out their designs on their sticky notes it was passed around and each member was able to critique the design by stating any flaws or how the design can be improved.</p>
     <p>This was important to me as I find myself struggling to say all my ideas as I'm worried they might be stupid ones. I find this to be due to the idea of conformity bias, where I tend to change my ideas in order to satisfy the already proposed ideas and the opinions of others. Overcoming this I felt at ease portraying my opinion on the sticky note.</p>
@@ -114,12 +114,13 @@
   <div class="caption">
     <p>In the image above all of our sticky notes are shown and you can see how each member was able to express their ideas and have it critiqued without feeling judged. This connects to course concepts regarding diverging and converging as through this tool we were able to determine what are the best solutions for us to move forward with. Furthermore all these unique designs incorporated different elements which could be summarized in another tool provided in lecture, a morph chart. This was done and is shown in the image below.</p>
   </div>
+  <h2>Morph Chart - Diverging</h2>
   <img class="centered-img" src="MORPH.png" alt="Morph Chart Design Concepts" />
   <div class="caption">
     <p>In the end this experience taught me, through this form of sprantic brainstorming it's much easier to put your first idea down and then rather than trying to knit and pick it yourself, the rest of your team helps with a brand new set of eyes. This ultimately makes your “crazy” idea at first result into a viable solution. As a result, I will not be scared of saying a poor idea as I am now aware of how with some reworking ideas can be implemented towards a functional solution.</p>
   <p>After working on a measurement matrix, and creating a pugh chart our team was able to collaborate and reach a conclusion which design is the best. This process was made easy with the implemented CAD designs created by Ryan Zhang. This sparked a new thought process for our team and helped us get a much better visualization of our designs. </p>
   </div>
-
+<h2>Measurement & Pugh & CAD Designs - Converging</h2>
   <img class="centered-img" src="MEASUREMENT.png" alt="Measurement Matrix Chart" />
   <img class="centered-img" src="PUGH.png" alt="Pugh Chart" />
   <img class="centered-img" src="CAD1.png" alt="CAD Renderings" />
