--- a/civ-bridge.html
+++ b/civ-bridge.html
@@ -120,7 +120,7 @@
     <p>A key design decision of ours was the splice attachment. This was something we encountered later on in the design process which required us to take a look at the Shear and Bending moment diagrams and find the optimal location to attach the two pieces. We then drew sketches of how exactly we would attach these components, and decided that it would be best if we were to fold them into each other. This would interlock each piece to each other proving to have a stronger bond. This resulted in our best attempt to construct a bridge that would be able to hold the maximum weight from the 3 coach train. Now we will begin to look at some of the main components of our design process, Wishing, SCAMPER and Verification. Each step was crucial to our success building upon each other for a final bridge.</p>
   </div>
 
-  <h2>Wishing</h2>
+  <h2>Wishing - Framing</h2>
   <table>
     <thead>
       <tr>
@@ -146,10 +146,13 @@
     <p>
       Together, these paired wishes helped us frame what success would look like for our final design and guided our criteria during later converging phases. It also ensured that our team's creativity was aligned with the practical requirements of the CIV102 project, setting a clear direction for both ideation and validation.
     </p>
+     <p>
+      This ultimately helped frame what we wanted our bridge to look like and what we idealized it to become. This helped bridge the gap between team memebers and gave a concrete idea in everyones mind of what our final design should be capable of and what we wanted to avoid.
+    </p>
   </div>
   
 
-  <h2>SCAMPER</h2>
+  <h2>SCAMPER - Diverging</h2>
   <div class="side-by-side-section">
     <div class="text-block caption">
       <p>Throughout the Bridge Design Process, we actively applied the SCAMPER technique—Substitute, Combine, Adapt, Modify, Put to another use, Eliminate, and Reverse—to guide our iterative design thinking and push beyond conventional solutions. This framework was especially helpful as we refined our structure to meet our primary goal: building a bridge capable of supporting at least 400 N of load.</p>
@@ -163,7 +166,7 @@
     </div>
   </div>
 
-  <h2>Verification</h2>
+  <h2>Verification - Converging</h2>
   <div class="side-by-side-section">
     <div class="text-block caption">
       <p>As we progressed through each iteration of our bridge design, we incorporated MATLAB simulations as a key method of verification. These simulations allowed us to model how a train would move across the bridge and analyze the resulting stress distributions, deflections, and failure points across different components. Rather than relying on trial and error alone, we used this data-driven approach to validate whether each iteration met our structural goals before physically constructing it.</p>
@@ -174,7 +177,7 @@
       <img src="VERIFICATION.png" alt="Verification Simulation Output" />
     </div>
   </div>
-   <h2>Construction – Representing</h2>
+   <h2>Construction – Represent</h2>
 
 <p>
 The construction phase of our CIV102 bridge was where our design truly came to life—a clear example of the Representing strand in the Frame•Diverge•Converge•Represent framework. Here, we transitioned from conceptual designs and digital models to a physical structure, where every fold, tab, and glue joint carried the weight of our decisions.
