--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
   <main>
     <h2>Welcome</h2>
-    <p>This portfolio documents my journey through engineering design at the University of Toronto. Each section explores a core project where I’ve applied creative problem-solving, collaborative prototyping, and stakeholder-driven iteration.</p>
+    <p><strong>Hello! My name is Gautam Manerikar</strong> and this portfolio documents my journey through engineering design at the University of Toronto. Each section explores a core project where I’ve applied creative problem-solving, collaborative prototyping, and stakeholder-driven iteration demonstrating my core values as an engineer.</p>
     <p>Click the sections above to view my Position Statement, Praxis I and II projects, the CIV102 Bridge design, and reference materials.</p>
 
     <h2>About This Portfolio</h2>
