--- a/position-statement.html
+++ b/position-statement.html
@@ -157,13 +157,14 @@
     <h2 style="text-align: center; color: #fff;">My Values and Beliefs in Engineering</h2>
     <p>I believe thoughtful design can create meaningful impact—whether it's improving daily experiences or supporting niche communities. I value <strong>empathy-driven design</strong>, where understanding user needs is the foundation of effective solutions.</p>
 
-    <p>In Praxis II, a meeting with the Toronto Bonsai Community reshaped our project. Josh shared how traditional moisture sensors damaged roots and gave inaccurate readings. This led us to pivot toward a <strong>non-invasive, Juniper-specific solution</strong> grounded in real feedback.</p>
+    <p>In Praxis II, a meeting with the Toronto Bonsai Community reshaped our entire project. Josh shared the communities struggles with how traditional moisture sensors damaged roots and gave inaccurate readings. This led us to pivot toward a <strong>non-invasive, Juniper-specific solution</strong> grounded in real feedback.</p>
 
-    <p>I also believe <strong>collaboration drives innovation</strong>. In Praxis II, we used pairwise comparison to debate and evaluate early concepts. These structured discussions helped us converge on a stronger design. In Praxis I, Amy and I co-designed a <strong>portable chair stabilizer</strong>—a simple, practical fix based on student needs.</p>
+    <p>I also believe <strong>collaboration drives innovation</strong>. In Praxis II, we used pairwise comparison to debate and evaluate early concepts. These structured discussions helped us converge on a stronger design. In Praxis I, our team worked closely together to design a <strong>portable chair stabilizer</strong>—a simple, practical fix based on student needs.</p>
 
     <p><strong>Adaptability</strong> is essential to my approach. When our Arduino-based moisture sensor failed in testing, we pivoted to a phone-based solution that was simpler and more reliable. In CIV102, we redesigned our bridge over five iterations, using <strong>MATLAB simulations</strong> and feedback to refine structural performance.</p>
 
     <p>Finally, I value <strong>accessibility in engineering</strong>. Across all projects, I prioritized usability and clarity—ensuring solutions were easy to use, easy to build, and genuinely helpful to those they were meant for.</p>
+    <p>To conclude there are 4 key beliefs that I bring towards engineering, empathy towards stakeholders and team members, collaboration, adaptability and accessibility. These the 4 main objectives that I try to bring when working I have worked on building solutions during my time as an Engineering Science student.</p>
 
     <p><a href="index.html">← Back to Home</a></p>
   </div>
