--- a/praxis-i.html
+++ b/praxis-i.html
@@ -91,12 +91,12 @@
     <p>We understood that UOFT cannot be expected to fix every chair so we wanted a solution that each student would be able to purchase if they found themselves in need. When designing our solution we wanted to make sure we adhered to 3 main objectives, Versatility, Durability and Usability. Since students would be sitting on different chairs across campus we wanted to ensure that our solution was versatile for differing chair types and is capable of withstanding enough weight that the solution does not break, or go through any wear and tear.</p>
     <p>We also didn’t want our solution to be a burden upon the user to attach and set the requirement for the attachment time and not wanting to damage the UOFT floors. These 3 objectives led our team into the design space working towards finding a solution to satisfy all 3. We began using brainwriting 6-3-5, a diverging tool that allows each group member to be creative in their own way expressing their thoughts in repeated rounds. This gave our team several ideas, which we were then able to use a Morph Chart, which helped combine and contrast between design concepts leaving us with several designs.</p>
     <p>Through some low fidelity prototypes and pairwise comparison we then had a list of 5 designs, which were then converged upon. Within our various designs we needed to compare them against each other to converge upon a final solution. This measurement matrix in conjecture with a pugh chart helped our team reach one solution. The Clay-Lever chair attachment.</p>
-    <p>The Clay-Lever Design is a portable solution that stabilizes uneven chair legs using modeling clay and a quick-release lever. The clay molds around the leg to securely attach the design, while a quick-release lever allows for easy height adjustment, similar to the mechanism used for adjusting bike seats. Now we will take a deeper dive into the CTMF’s we used.</p>
+    <p>The Clay-Lever Design is a portable solution that stabilizes uneven chair legs using modeling clay and a quick-release lever. The clay molds around the leg to securely attach the design, while a quick-release lever allows for easy height adjustment, similar to the mechanism used for adjusting bike seats. Now we will take a deeper dive into the CTMF’s used.</p>
   </div>
 <h2>Reframing - Framing</h2>
 <img class="centered-img" src="REFRAME.png" alt="Reframing Visual" />
 <div class="caption">
-  <p>As our understanding of the problem evolved, so did our framing of the stakeholders and design scope. Initially, we identified both UofT Engineering Students and Maintenance Staff as key stakeholders impacted by unstable chairs across campus. However, through further analysis and practicality considerations, we refined our focus to only include UofT students, specifically those in Engineering Science.</p>
+  <p>As our understanding of the Splartz evolved, so did our framing of the stakeholders and design scope. Initially, we identified both UofT Engineering Students and Maintenance Staff as key stakeholders impacted by unstable chairs across campus. However, through further analysis and practicality considerations, we refined our focus to only include UofT students, specifically those in Engineering Science.</p>
 
   <p>This shift was grounded in the observation that the issue was most prevalent in three specific rooms heavily used by EngSci students. Several such defective chairs have been found in the Engineering Science Common Room in Bahen 2128 (BA 2128), the Engineering and Computer Science Library in Sandford Fleming 2402 (SF 2402), and Chestnut Residence at 89 Chestnut St, all popular student study spaces.</p>
 
@@ -108,7 +108,7 @@
   <h2>Brainwriting 6-3-5 - Diverging</h2>
   <div class="caption">
     <p>While using “Brainwriting 6-3-5” our team began by using several sticky notes to sketch out a possible solution for our opportunity. This diverging strategy is strong as it has each member independently work and then share resulting in all ideas and opinions being shared. After each member had a chance to sketch out their designs on their sticky notes it was passed around and each member was able to critique the design by stating any flaws or how the design can be improved.</p>
-    <p>This was important to me as I find myself struggling to say all my ideas as I'm worried they might be stupid ones. I find this to be due to the idea of conformity bias, where I tend to change my ideas in order to satisfy the already proposed ideas and the opinions of others. Overcoming this I felt at ease portraying my opinion on the sticky note.</p>
+    <p>This was important to me as I find myself struggling to say all my ideas as I'm worried they might be stupid ones. I find this to be due to the idea of conformity bias, where I tend to change my ideas in order to satisfy the already proposed ideas and the opinions of others. Overcoming this I felt at ease portraying my opinion on the sticky note. This corelated with my value of empathy, as this diverging activity helped allow team members to openly voice their unique opinions towards creating a solution.</p>
   </div>
   <img class="centered-img" src="BRAINWRITING.png" alt="Brainwriting Sticky Notes" />
   <div class="caption">
@@ -120,14 +120,26 @@
     <p>In the end this experience taught me, through this form of sprantic brainstorming it's much easier to put your first idea down and then rather than trying to knit and pick it yourself, the rest of your team helps with a brand new set of eyes. This ultimately makes your “crazy” idea at first result into a viable solution. As a result, I will not be scared of saying a poor idea as I am now aware of how with some reworking ideas can be implemented towards a functional solution.</p>
   <p>After working on a measurement matrix, and creating a pugh chart our team was able to collaborate and reach a conclusion which design is the best. This process was made easy with the implemented CAD designs created by Ryan Zhang. This sparked a new thought process for our team and helped us get a much better visualization of our designs. </p>
   </div>
-<h2>Measurement & Pugh & CAD Designs - Converging</h2>
+<h2>Measurement Matrix & Pugh & CAD Designs - Converging</h2>
   <img class="centered-img" src="MEASUREMENT.png" alt="Measurement Matrix Chart" />
   <img class="centered-img" src="PUGH.png" alt="Pugh Chart" />
+<p>
+Our team used a Measurement Matrix to compare key concepts based on a consistent set of criteria. We evaluated each design against metrics such as dimensions, weight, height adjustment and time taken which were all rooted in our goal of creating a solution accessible to university students across different classroom environments.
+</p>
+
+<p>
+This structured evaluation allowed us to score each concept objectively and identify which ones had the greatest overall potential. However, to build on those insights and make a more confident decision, we then transitioned to using a Pugh Chart. The Pugh Chart helped us compare our shortlisted concepts against a baseline design, using the same criteria but in a relative format, identifying where certain designs excelled or fell short in direct comparison.
+</p>
+
+<p>
+Together, these tools formed a powerful converge-phase pairing. The Measurement Matrix provided quantitative clarity, while the Pugh Chart supported qualitative reasoning and reduced potential bias. This approach reflects my position that engineering design benefits from both structure and reflection—tools like these allow for more inclusive, balanced decisions, especially when team perspectives differ. They helped ensure we selected a concept that could realistically meet the needs of our end user while also aligning with the strengths of our team. This highlighted the colaboration aspect of my values as through teamwork we were able to fill out the measurement matrix and analyze the results.
+</p>
+<h2>CAD Designs - Represent</h2>
   <img class="centered-img" src="CAD1.png" alt="CAD Renderings" />
 
   <div class="caption">
     <p>Overall the action of prototyping was essential in our team's ability to make judgment regarding the solutions that we wanted to propose during Alpha, as with the physical prototypes we understood the mechanics of our solution and whether or not they would be feasible to complete the task at hand, stopping a wobble.</p>
-    <p>In conclusion, our design team was able to use the Brainwriting 6-3-5 and prototyping to our absolute advantage as these techniques allowed us to display our creative ideas that might have seemed bad in our minds, after working through them were feasible solutions. Ultimately no bad idea should go unshared as it can become your best. This thought process helped us ultimately select our final design prototype E, the Clay-Lever design.</p>
+    <p>In conclusion, our team was able to use the Brainwriting 6-3-5, Morph Chart, Measurement Matrix, Pugh Charts and prototyping to our absolute advantage as these techniques allowed us to display our creative ideas that might have seemed bad in our minds, after working through them were feasible solutions. Ultimately no bad idea should go unshared as it can become your best. This thought process helped us ultimately select our final design prototype E, the Clay-Lever design. This once again highlights some of my key values, through adaptability of being open minded to new solutions that aren't your own and also focussing on still creating a unanimous decision towards the most accessible design solution.</p>
   </div>
 
   <h3>Evidence:</h3>
