--- a/civ-bridge.html
+++ b/civ-bridge.html
@@ -130,7 +130,7 @@
     </thead>
     <tbody>
       <tr><td>I wish our bridge can hold 400 N</td><td>I wish our bridge does not fall off the sides</td></tr>
-      <tr><td>I wish our bridge [FOS] are all the same</td><td>I wish our bridge doesn't twist under load</td></tr>
+      <tr><td>I wish our bridge factors of safety [FOS] are all the same</td><td>I wish our bridge doesn't twist under load</td></tr>
       <tr><td>I wish our bridge had a seamless splice connection</td><td>I wish our bridge isn't too difficult to construct</td></tr>
       <tr><td>I wish our bridge achieves the best strength-to-weight ratio</td><td>I wish our bridge doesn't exceed the material limit</td></tr>
       <tr><td>I wish our bridge used minimal adhesive while maintaining strength.</td><td></td></tr>
@@ -141,7 +141,7 @@
       During the early diverging phase of our bridge design process, we used a Wishing exercise to help us think beyond constraints and imagine an ideal version of our structure. By listing out both “wishes” and “wish nots,” our team was able to creatively explore possibilities without being immediately limited by feasibility or resources.
     </p>
     <p>
-      This method allowed us to generate aspirational goals—such as “I wish our bridge achieves the best strength-to-weight ratio” and “I wish our bridge [FOS] are all the same”—which helped us define the performance standards we hoped to achieve. At the same time, the “wish not” column grounded our thinking by identifying failure modes and usability concerns we wanted to avoid, such as twisting under load or being too difficult to construct.
+      This method allowed us to generate aspirational goals—such as “I wish our bridge achieves the best strength-to-weight ratio” and “I wish our bridge factors of safety [FOS] are all the same”—which helped us define the performance standards we hoped to achieve. At the same time, the “wish not” column grounded our thinking by identifying failure modes and usability concerns we wanted to avoid, such as twisting under load or being too difficult to construct.
     </p>
     <p>
       Together, these paired wishes helped us frame what success would look like for our final design and guided our criteria during later converging phases. It also ensured that our team's creativity was aligned with the practical requirements of the CIV102 project, setting a clear direction for both ideation and validation.
@@ -171,35 +171,36 @@
     <div class="text-block caption">
       <p>As we progressed through each iteration of our bridge design, we incorporated MATLAB simulations as a key method of verification. These simulations allowed us to model how a train would move across the bridge and analyze the resulting stress distributions, deflections, and failure points across different components. Rather than relying on trial and error alone, we used this data-driven approach to validate whether each iteration met our structural goals before physically constructing it.</p>
       <p>By running these simulations, we gained insight into which parts of our bridge were most vulnerable under load. This was essential, as our ultimate objective was to achieve a balanced design—one in which all Factors of Safety (FOS) across the bridge would approach failure at the same time. This type of uniform failure is structurally ideal because it ensures that no single component is disproportionately stressed, and it maximizes the efficiency of the material used.</p>
-      <p>Through MATLAB, we were able to verify and compare each version of our design, adjusting flange widths, splice connection placement, and tab lengths based on the outcomes of each simulation. When one iteration showed excessive buckling in the side walls while other areas remained well within the safety threshold, we knew that material was being underutilized elsewhere. This verification process helped us converge toward a design that didn’t just meet safety requirements—but did so in the most optimized, balanced way possible.</p>
+      <p>Through MATLAB, we were able to verify and compare each version of our design, adjusting flange widths, splice connection placement, and tab lengths based on the outcomes of each simulation. When one iteration showed excessive buckling in the side walls while other areas remained well within the safety threshold, we knew that material was being underutilized elsewhere. This verification process helped us converge toward a design that didn’t just meet safety requirements, but did so in the most optimized, balanced way possible.</p>
     </div>
     <div class="image-block">
       <img src="VERIFICATION.png" alt="Verification Simulation Output" />
     </div>
   </div>
    <h2>Construction – Represent</h2>
-
+ <div class="side-by-side-section">
+    <div class="text-block caption">
 <p>
 The construction phase of our CIV102 bridge was where our design truly came to life—a clear example of the Representing strand in the Frame•Diverge•Converge•Represent framework. Here, we transitioned from conceptual designs and digital models to a physical structure, where every fold, tab, and glue joint carried the weight of our decisions.
 </p>
-
 <p>
 In line with my engineering design position—that design is an iterative and collaborative process—this phase demonstrated the importance of prototyping, adaptability, and team dynamics. We applied tools like Design for Assembly to reduce complexity in our glue joints and folding patterns, while Iterative Prototyping helped us refine our approach between builds, addressing alignment issues and improving material performance through testing and revision.
 </p>
-
 <p>
 But beyond technical execution, this phase underscored the value of a psychologically safe team environment. As seen in the moments we captured—waiting for glue to dry over shared meals—we fostered a space where every team member could contribute openly, ask questions, and propose solutions without hesitation. That sense of mutual respect and comfort fueled better communication, smoother problem-solving, and ultimately, a stronger final product.
 </p>
-
 <p>
 This balance of precision, iteration, and team support is at the heart of how I approach engineering design: as a deeply human, flexible process that thrives when built on shared trust and continuous learning.
 </p>
-
+         </div>
+     <div class="image-block">
 <div style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
   <img src="CIV1.png" alt="Measuring and scoring the matboard" style="width: 30%; max-width: 300px;">
   <img src="CIV2.png" alt="Precise gluing with clamps" style="width: 30%; max-width: 300px;">
   <img src="CIV3.png" alt="Team meal during glue drying" style="width: 30%; max-width: 300px;">
-</div>
+</div>    
+     </div>
+  </div>
 
   <h2>Conclusion</h2>
 <div class="caption">
