--- a/civ-bridge.html
+++ b/civ-bridge.html
@@ -177,30 +177,29 @@
       <img src="VERIFICATION.png" alt="Verification Simulation Output" />
     </div>
   </div>
-   <h2>Construction – Represent</h2>
- <div class="side-by-side-section">
-    <div class="text-block caption">
-<p>
-The construction phase of our CIV102 bridge was where our design truly came to life—a clear example of the Representing strand in the Frame•Diverge•Converge•Represent framework. Here, we transitioned from conceptual designs and digital models to a physical structure, where every fold, tab, and glue joint carried the weight of our decisions.
-</p>
-<p>
-In line with my engineering design position—that design is an iterative and collaborative process—this phase demonstrated the importance of prototyping, adaptability, and team dynamics. We applied tools like Design for Assembly to reduce complexity in our glue joints and folding patterns, while Iterative Prototyping helped us refine our approach between builds, addressing alignment issues and improving material performance through testing and revision.
-</p>
-<p>
-But beyond technical execution, this phase underscored the value of a psychologically safe team environment. As seen in the moments we captured—waiting for glue to dry over shared meals—we fostered a space where every team member could contribute openly, ask questions, and propose solutions without hesitation. That sense of mutual respect and comfort fueled better communication, smoother problem-solving, and ultimately, a stronger final product.
-</p>
-<p>
-This balance of precision, iteration, and team support is at the heart of how I approach engineering design: as a deeply human, flexible process that thrives when built on shared trust and continuous learning.
-</p>
-         </div>
-     <div class="image-block">
-<div style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap;">
+<h2>Construction – Represent</h2>
+
+<div class="text-block caption">
+  <p>
+  The construction phase of our CIV102 bridge was where our design truly came to life—a clear example of the Representing strand in the Frame•Diverge•Converge•Represent framework. Here, we transitioned from conceptual designs and digital models to a physical structure, where every fold, tab, and glue joint carried the weight of our decisions.
+  </p>
+  <p>
+  In line with my engineering design position—that design is an iterative and collaborative process—this phase demonstrated the importance of prototyping, adaptability, and team dynamics. We applied tools like Design for Assembly to reduce complexity in our glue joints and folding patterns, while Iterative Prototyping helped us refine our approach between builds, addressing alignment issues and improving material performance through testing and revision.
+  </p>
+  <p>
+  But beyond technical execution, this phase underscored the value of a psychologically safe team environment. As seen in the moments we captured—waiting for glue to dry over shared meals—we fostered a space where every team member could contribute openly, ask questions, and propose solutions without hesitation. That sense of mutual respect and comfort fueled better communication, smoother problem-solving, and ultimately, a stronger final product.
+  </p>
+  <p>
+  This balance of precision, iteration, and team support is at the heart of how I approach engineering design: as a deeply human, flexible process that thrives when built on shared trust and continuous learning.
+  </p>
+</div>
+
+<div style="display: flex; gap: 10px; justify-content: center; flex-wrap: wrap; margin-top: 20px;">
   <img src="CIV1.png" alt="Measuring and scoring the matboard" style="width: 30%; max-width: 300px;">
   <img src="CIV2.png" alt="Precise gluing with clamps" style="width: 30%; max-width: 300px;">
   <img src="CIV3.png" alt="Team meal during glue drying" style="width: 30%; max-width: 300px;">
-</div>    
-     </div>
-  </div>
+</div>
+
 
   <h2>Conclusion</h2>
 <div class="caption">
