--- a/civ-bridge.html
+++ b/civ-bridge.html
@@ -195,7 +195,7 @@
   But beyond technical execution, this phase underscored the value of a psychologically safe team environment. As seen in the moments we captured—waiting for glue to dry over shared meals—we fostered a space where every team member could contribute openly, ask questions, and propose solutions without hesitation. That sense of mutual respect and comfort fueled better communication, smoother problem-solving, and ultimately, a stronger final product.
   </p>
   <p>
-  This balance of precision, iteration, and team support is at the heart of how I approach engineering design: as a deeply human, flexible process that thrives when built on shared trust and continuous learning.
+  This balance of precision, iteration, and team support is at the heart of how I approach engineering design. Showing empathy towards team members and having to adapt to design changes made throughout the construction process.
   </p>
 </div>
 
