--- a/civ-bridge.html
+++ b/civ-bridge.html
@@ -43,7 +43,7 @@
     }
 
     .caption {
-      max-width: 800px;
+      max-width: 1000px;
       margin: 20px auto;
       font-size: 1rem;
       line-height: 1.6;
@@ -74,21 +74,16 @@
 
     .side-by-side-section {
       display: flex;
-      justify-content: space-between;
-      align-items: center;
+      justify-content: center;
+      align-items: stretch;
       max-width: 1000px;
       margin: 40px auto;
       gap: 40px;
     }
 
     .text-block {
-      flex: 1;
-      max-width: 700px;
-    }
-
-     .text-block-1 {
-      flex: 1;
-      max-width: 800px;
+      flex: 2;
+      padding-right: 20px;
     }
 
     .image-block {
@@ -99,9 +94,11 @@
     }
 
     .image-block img {
+      width: 100%;
       max-width: 100%;
       height: auto;
       border: 2px solid #cce7ff;
+      object-fit: contain;
     }
   </style>
 </head>
